# passhrs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.static  LICENSE  Makefile  NATIVE_SSHD_CI_FIX.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  crypto-backend.md  follow-up-issues.md  macos-openssh-setup.md  windows-openssh-setup.md
src/: cli.rs  control.rs  forward.rs  main.rs  proxy.rs  query.rs  sftp.rs  ssh.rs  types.rs
tests/: 01_destination_parsing.rs  02_forward_spec.rs  03_ssh_options.rs  04_session_modes.rs  05_sftp_push_pull.rs  06_exec_env.rs  07_timeout_connect.rs  08_compat_args.rs  09_edge_cases.rs  10_compat_doc_check.rs  11_remote_forward_integration.rs  12_key_auth_integration.rs  13_password_from_file.rs  14_docker_integration.rs  15_native_sshd_integration.rs
tests/container/: Dockerfile
tests/sshd/: setup-linux.sh  setup-macos-brew-openssh.sh  setup-macos-docker.sh  setup-macos.sh  setup-windows.ps1  sshd_config
