[package]
name = "passhrs"
version = "1.0.6"
edition = "2021"
repository = "https://github.com/dyrnq/passhrs"
license = "MIT"
description = "SSH automation tool (russh-based, ssh-compatible CLI)"

[dependencies]
russh = { version = "0.62", default-features = false, features = ["rsa", "ring", "flate2"] }
ssh-key = "0.7.0-rc.10"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
shell-escape = "0.1"
term_size = "0.3"
dirs = "6"
bytes = "1"
# futures is needed for channel read polling
futures = "0.3"
russh-sftp = "2.3.0"
copia = { version = "0.1.3", features = ["async"] }
crossterm = "0.29.0"
# `libc` provides the SOL_SOCKET / SO_BINDTODEVICE constants and
# `setsockopt` symbol used by `apply_bind_interface` (Linux-only).
# Already a transitive dep of `tokio`/`russh`; declaring it
# directly avoids an unsafe `extern "C"` block in src/ssh.rs.
libc = "0.2"
